--- a/pkenya/feeds/templates/feeds/feeds.html
+++ b/pkenya/feeds/templates/feeds/feeds.html
@@ -35,6 +35,10 @@
                 <textarea class="form-control" rows="3" name="post"></textarea>
               </div>
               <div class="form-group">
+                <div class="btn-group">
+                  <label class="control-label">Upload Photo</label>
+                  <input id="input-4" name="input4[]" type="file" multiple class="file-loading"> <i class="fa fa-upload" aria-hidden="true"></i>
+                </div>
                 <button type="button" class="btn btn-primary btn-post">
                   <span class="glyphicon glyphicon-send"></span> {% trans 'Post' %}
                 </button>
@@ -61,7 +65,7 @@
           </form>
 
         </div>
-      </div>      
+      </div>
     </div>
   </div>
 
