--- a/pkenya/templates/base.html
+++ b/pkenya/templates/base.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Politics Kenya{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-    <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
     <link href="{% static 'css/bootcamp.css' %}?v=1" rel="stylesheet">
+    {%block statics%}
+
+    {%endblock statics%}
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -54,16 +57,15 @@
                 {% if not user.is_authenticated%}
                  <li class=""><a href="" class="">{% trans 'Home'%}</a></li>
                  <li class=""><a href="" class="">{% trans 'global'%}</a></li>
-                 <li class=""><a href="" class="">{% trans 'Natinal'%}</a></li>
-                 <li class=""><a href="{% url 'regions'%}" class="">{% trans 'Regions'%}</a></li>
+                 <li class=""><a href="{%url 'nationlist'%}" class="">{% trans 'Natinal'%}</a></li>
                 {%endif%}
-                <li class=""><a href="{% url 'regions'%}" class="">{% trans 'Regions'%}</a></li>
                 {%if user.is_authenticated%}
                 <li>
                   <a href="#" id="notifications" data-container="body" data-toggle="popover" data-placement="bottom" title="Notifications">
                     <span class="glyphicon glyphicon-bell"></span>
                   </a>
                 </li>
+                <li class=""><a href="{% url 'regions'%}" class="">{% trans 'Regions'%}</a></li>
                 <li><a href="{% url 'feeds' %}">{% trans 'My world' %}</a></li>
                 <li><a href="{% url 'articles' %}">{% trans 'Top stories' %}</a></li>
                 <!-- <li><a href="{% url 'questions' %}">{% trans 'Q&A' %}</a></li> -->
